# compile-time-utilities

./: .gitignore  CMakeLists.txt  README.md  a.out  ctarr_utils.hpp  ctarray.hpp  ctarray_sort.hpp  ctmap.hpp  ctpair.hpp  ctstring.hpp  main.cpp
.github/workflows/: cmake-multi-platform.yml
examples/: CMakeLists.txt  arg_parser  arg_parser.cpp  func_map.cpp  string_map.cpp
include/ctu/: ctarray.hpp  ctmap.hpp  ctpair.hpp  ctstring.hpp
tests/: CMakeLists.txt  constructors_test  constructors_test.cpp  main  main.cpp
